--- a/StatEngine/src/app/register/register.component.css
+++ b/StatEngine/src/app/register/register.component.css
@@ -3,7 +3,6 @@
 
   position: absolute;
   width: 100%;
-  height: 100%;
   left: 0px;
   top:  0px;
   z-index: 0;
@@ -43,7 +42,6 @@
   .form-container{
     display: flex;
     border-color: white;
-    padding: 10px;
     z-index: 1;
   }
   .input-box{
